argocd/infra/istio/resources/istio-gw.yaml
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: kube-gateway
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#     - hosts:
#         - "*.yanello.net"
#         - yanello.net
#       port:
#         name: http
#         number: 80
#         protocol: HTTP
#       # tls:
#       #   httpsRedirect: true
#     - hosts:
#         - "*.yanello.net"
#         - "yanello.net"
#       port:
#         number: 443
#         name: https
#         protocol: HTTPS
#       tls:
#         credentialName: default-ingress-cert
#         # maxProtocolVersion: TLSV1_3
#         # minProtocolVersion: TLSV1_2
#         mode: SIMPLE
#         cipherSuites:
#           - AES_256_GCM_SHA384
#           - ECDHE-ECDSA-CHACHA20-POLY1305
#           - ECDHE-ECDSA-AES256-GCM-SHA384
#           - ECDHE-RSA-AES256-GCM-SHA384
#           - ECDHE-ECDSA-CHACHA20-POLY1305
#           - ECDHE-RSA-CHACHA20-POLY1305
# ---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
  #   cert-manager.io/common-name: yanello.net
  #   cert-manager.io/dns-names: "*.yanello.net,yanello.net"
  #   cert-manager.io/duration: 2160h
  #   cert-manager.io/renew-before: 360h
spec:
  addresses:
    - value: 10.10.8.1
      type: IPAddress
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: http-root
      protocol: HTTP
      hostname: "yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      hostname: "*.yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: default-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-root
      protocol: HTTPS
      hostname: "yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: default-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: ssh
      protocol: TCP
      port: 2200
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
  hostnames:
    - "*.yanello.net"
    - "yanello.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: tls-passthrough-gateway
# spec:
#   addresses:
#     - value: 10.10.8.1
#       type: IPAddress
#   gatewayClassName: istio
#   listeners:
#     - name: gateway-tls-passthrough
#       protocol: TLS
#       port: 443
#       hostname: "*.yanello.net"
#       tls:
#         mode: Passthrough
#       allowedRoutes:
#         namespaces:
#           from: All
---
